Updated menu numbering but spacing is not ideal yet

--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -56,94 +56,84 @@
 				<span class="num">11.</span><span class="fdname">Seared Scallops - $8.95</span><br>
 	      Wild scallops saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
 	    </div>  
-		</div>
-		<!--end of column-->	
-	<div class="menu-category span12"><span class="food-title">The Goods</span></div>
+		</div><!--end of column-->	
+	</div><!--end of span12 block-->	
+	<div class="menu-category span12">
+	<span class="food-title">The Goods</span>
+	</div>
 	<div class="span12 block">
 		<div class="span6 menu-column">
-			<ul>
-				<li><span class="num">12.</span><spanclass="fdname">West Caribbean Bowl - $12.00</span><br>
-	      Dis' be the second most popular "bowl" in the Caribbean mon! Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh.  Served with tortilla chips.<br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
-	    	</li>
-		  </div>
-		  <div class="span6 menu-row">
+			<div class="menu-item">
+				<span class="num">12.</span><span class="fdname">West Caribbean Bowl - $12.00</span><br>
+	      Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh.  Served with tortilla chips.<br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
+	   </div>
+		  <div class="menu-item">
 		  	<span class="num">13.</span><span class="fdname">Rice Bean Thigh Trio - $8.00</span><br>
-	        Two scoops of jasmine rice, a cup of black beans and a chicken thigh. <br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
+	      Two scoops of jasmine rice, a cup of black beans and a chicken thigh. <br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
 		  </div>	
-		</li>
-		<li>
-		  <div class="span6 menu-row">
+		  <div class="menu-item">
 		  	<span class="num">14.</span><span class="fdname">Paseo Greens - $4.75</span><sup class="gf-vg"> GF / VG</sup><br>
-	        Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.<br><span class="alt-id"><em>Add chicken, pork, or tofu - $3.00<br> Add prawns, scallops, or fish - $4.00</em></span>
+	      Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.<br><span class="alt-id"><em>Add chicken, pork, or tofu - $3.00<br> Add prawns, scallops, or fish - $4.00</em></span>
 		  </div>
-		  <div class="span6 menu-row">
+		</div>
+		<!--end of column-->   
+		<div class="span6 menu-column">
+		  <div class="menu-item">	
 		  	<span class="num">15.</span><span class="fdname">Black Beans and Rice - $5.50</span><sup class="gf-vg"> GF / VG</sup><br>
-	        A bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans.
-		  </div>	
-		</li>
-	    <li>
-		  <div class="span6 menu-row">
+	      A bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans.
+		  </div>  	
+		  <div class="menu-item">
 		  	<span class="num">16.</span><span class="fdname">Rice Beans and Salad - $8.25</span><sup class="gf-vg"> GF / VG</sup><br>
-	        Two scoops of jasmine rice, a cup of black beans and Paseo Greens.
+	      Two scoops of jasmine rice, a cup of black beans and Paseo Greens.
 		  </div>
-		</li>
-	  </ul>
-	</div><!--end of span12-->	
+		</div><!--end of column-->
+	</div><!--end of span12 block-->		
 	<div class="menu-category span12">
 		<span class="food-title">Entr&eacute;es</span>
 		<span class="description"><br><em>All entr&eacute;es are served with jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
 	</div>
 	<div class="span12 block">
-		<ul class="list-2s">
-			<li>
-		  	<div class="span6 menu-row">
-		  		<span class="num">17.</span><span class="fdname">Half Chicken Dinner - $12.50</span><br>
-					A huge half chicken oven roasted in Paseo Marinade.
-		  	</div>
-		  	<div class="span6 menu-row">
-					<span class="num">18.</span><span class="fdname">Caribbean Roast Dinner - $12.50</span><br>
-					<span class="alt-id"><em>Our entr&eacute;e form of the #2.</em></span><br>
-					Pork shoulder slow-roasted in Paseo Marinade until falling apart.
-		  	</div>	
-		  </li>
-  		<li>
-		  	<div class="span6 menu-row">
-					<span class="num">19.</span><span class="fdname">Smokin' Thigh Dinner - $12.50</span><br>
-					Two bone-in chicken thighs oven roasted in Paseo Marinade.
-		  	</div>
-		  	<div class="span6 menu-row">
-					<span class="num">20.</span><span class="fdname">Chicken Breast Dinner - $13.00</span><br>
-					A boneless, skinless chicken breast grilled on a flat top and basted wih Paseo Marinade until golden brown.
-		  	</div>	
-		  </li>
-		  <li>
-		  	<div class="span6 menu-row">
-		  		<span class="num">21.</span><span class="fdname">Pork Loin Dinner - $13.00</span><br>
-					Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.
-		  	</div>
-		  	<div class="span6 menu-row">
-		  		<span class="num">22.</span><span class="fdname">Caribbean Scallops Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br> Wild scallops sautéed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  	</div>	
-		  </li>
-		  <li>
-		  	<div class="span6 menu-row">
-					<span class="num">23.</span><span class="fdname">Paseo Fish Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
-					Fish of the day saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  	</div>
-		  	<div class="span6 menu-row">
-					<span class="num">24.</span><span class="fdname">Paseo Prawn Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
-					Tiger prawns saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  	</div>	
-		  </li>
-		  <li>
-		  	<div class="span6 menu-row">
-					<span class="num">25.</span><span class="fdname">Tofu Con Gusto - $12.50</span><sup class="gf-vg"> GF / VG</sup><br>
-					Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  	</div>
-		  	<div class="span6 menu-row">
-		  		<span class="num">26.</span><span class="fdname">Batata Fritas - $10.50</span><br>Hand cut sweet potatos fried in grass-fed beef fat.  Free for BBBC members.
-
-		  </li>
+		<div class="span6 menu-column">
+		  <div class="menu-item">
+		  	<span class="num">17.</span><span class="fdname">Half Chicken Dinner - $12.50</span><br>
+				A huge half chicken oven roasted in Paseo Marinade.
+		  </div>
+		  <div class="menu-item">
+				<span class="num">18.</span><span class="fdname">Caribbean Roast Dinner - $12.50</span><br>
+				<span class="alt-id"><em>Our entr&eacute;e form of the #2.</em></span><br>
+				Pork shoulder slow-roasted in Paseo Marinade until falling apart.
+		  </div>	
+		  <div class="menu-item">
+				<span class="num">19.</span><span class="fdname">Smokin' Thigh Dinner - $12.50</span><br>Two bone-in chicken thighs oven roasted in Paseo Marinade.
+		  </div>
+		  <div class="menu-item">
+				<span class="num">20.</span><span class="fdname">Chicken Breast Dinner - $13.00</span><br>A boneless, skinless chicken breast grilled on a flat top and basted wih Paseo Marinade until golden brown.
+		  </div>	
+		  <div class="menu-item">
+		  	<span class="num">21.</span><span class="fdname">Pork Loin Dinner - $13.00</span><br>Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.
+		  </div>
+		</div>
+		<!--end of menu column-->  
+		<div class="span6 menu-column">  
+		  <div class="menu-item">
+		  	<span class="num">22.</span><span class="fdname">Caribbean Scallops Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br> Wild scallops sautéed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
+		  </div>	
+		  <div class="menu-item">
+				<span class="num">23.</span><span class="fdname">Paseo Fish Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
+				Fish of the day saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
+		  </div>
+		  <div class="menu-item">
+				<span class="num">24.</span><span class="fdname">Paseo Prawn Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
+				Tiger prawns saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
+		  </div>	
+		  <div class="menu-item">
+				<span class="num">25.</span><span class="fdname">Tofu Con Gusto - $12.50</span><sup class="gf-vg"> GF / VG</sup><br>
+				Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
+		  </div>
+		  <div class="menu-item">
+		  	<span class="num">26.</span><span class="fdname">Batata Fritas - $10.50</span><br>Hand cut sweet potatos fried in grass-fed beef fat.  Free for BBBC members.
+		  </div>
+		</div> 
 	</div><!--end of span12-->	  	
 	<div class="menu-category span12">
 		<span class="food-title">Loners</span>
@@ -174,9 +164,11 @@
 			<div class="side">Jalapenos - $0.50</div>	
 			<div class="side">Can Soda or Water - $1.25</div>	
 	</div>
-	<div class="span12 key-food">
+	<div class="menu-category span12">
+		<span class="description">
 		GF: Gluten-Free<br>
 		VG: Vegetarian<br>
+		</span>
 		<span class="alt-id">All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
 	</div>	
 
