--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row-fluid">
 	<div class="menu-category span12">
-		<span class="food-title">Sandwiches</span><span class="description">
+		<span class="menu-title">Sandwiches</span><span class="description">
 	    <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00</em></span>
 	</div> 
 	<div class="span12 block">
@@ -59,7 +59,7 @@
 		</div><!--end of column-->	
 	</div><!--end of span12 block-->	
 	<div class="menu-category span12">
-	<span class="food-title">The Goods</span>
+	<span class="menu-title">The Goods</span>
 	</div>
 	<div class="span12 block">
 		<div class="span6 menu-column">
@@ -89,7 +89,7 @@
 		</div><!--end of column-->
 	</div><!--end of span12 block-->		
 	<div class="menu-category span12">
-		<span class="food-title">Entr&eacute;es</span>
+		<span class="menu-title">Entr&eacute;es</span>
 		<span class="description"><br><em>All entr&eacute;es are served with jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
 	</div>
 	<div class="span12 block">
@@ -136,7 +136,7 @@
 		</div> 
 	</div><!--end of span12-->	  	
 	<div class="menu-category span12">
-		<span class="food-title">Loners</span>
+		<span class="menu-title">Loners</span>
 		<span class="description"><br><em>All loners are served with a cup of Jasmine rice.</em><span>
 	</div>
 	<div class="span12 block">
@@ -151,7 +151,7 @@
   		<div class="side">Tofu in Red Sauce - $5.75</div>
 		  
 			<div class="menu-category span12">
-			<span class="food-title">Sides</span>
+			<span class="menu-title">Sides</span>
 			</div>
 		  <div class="side">6oz / 12oz black beans - $3.00 / 4.25</div>
 			<div class="side">6oz / 12oz Jasmine rice - $1.50 / 2.50</div>
@@ -171,6 +171,18 @@
 		</span>
 		<span class="alt-id">All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
 	</div>	
+
+
+<div class="span6 menu-column">
+	<table class="menu-item3">
+   <tr>
+    	<th>1. Grilled Pork - $8.50 </th>
+   </tr>
+   <tr>	
+    <td>Cubed pork loin grilled on a flat top and basted with  until golden brown.</td>
+    </tr>
+	</table>
+</div>
 
 </div>
 	
