--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,52 +1,30 @@
 <% provide(:title, 'News') %>
+	<h1 class="page-title">Press</h1>
+	<div class="menu-category">
+		<span class="menu-title">
+			Magazines 
+		</span>
+	</div>		 
+
 	<article>
-		<h2>Esquire</h2>
+		<h4><em>Esquire<em></h4>
 			<p>
 				In 2008 Paseo was credited as one of the best sandwiches in America, find us under the category <strong>Cuban Meat Sandwich</strong>. Link to coverage: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
 			</p>	
 	</article>
 	<article>
-		<h2>The Seattle Times</h2>
+		<h4>The Seattle Times</h4>
+			<p class="description">
+				It's comes as no surprise Paseo has been featured in <cite>The Seattle Times</cite> on numerous occasions.  Here are some of our favorite articles over the past years.
+			</p>	
 			<p>
-				<a href="http://seattletimes.com/html/pacificnw/2004299471_pacificportrait23.html" target="_blank">Paseo in the Seattle Times</a>
-			</p>
+				2006: <a href="http://community.seattletimes.nwsource.com/archive/?date=20060901&slug=deal01" target="_blank">A Midnight special hits the spot at lunch</a><br>
+				2008: <a href="http://seattletimes.com/html/pacificnw/2004299471_pacificportrait23.html" target="_blank">Paseo Caribbean | Snares the hungry in its saucy, scentual embrace</a><br>	
+				2011: <a href="http://seattletimes.com/html/restaurants/2015471512_leson01.html" target="_blank">Looking for the best sandwiches in the area? Nancy Leson's readers cast their votes</a>
+			</p>	
 	</article>
-	<p>
-		All sandwiches are on a lightly toasted baguette slathered with aioli (seasoned mayo) , fresh cilantro, pickled jalapeños, crisp romaine lettuce & crowned with caramelized onions.
+	<article>
+		<h4>Seattle Magazine<h4>
+			<div class="description">
+				Paseo has achieved the 
 
-
-Grilled Pork $8.50
-Cubed pork loin grilled over lava rocks & basted w/ Paseo Marinade until golden brown.
-Caribbean Roast *MOST POPULAR* $8.50
-Pork shoulder coated in Paseo Marinade & slow roasted 'til falling into succulent morsels.
-Chicken Breast $8.50
-
-
-Plump chicken breast dredged in Paseo Marinade & fire grilled to perfection.
-Smokin' Thighs $8.50
-2 Marinated, skin-on, boneless chicken thighs; flash grilled & oven roasted.
-
-
-Sautéed Prawns $8.95
-6 Black Tiger Prawns sautéed in extra virgin olive oil with our garlic tapenade. (Optional spice 1-5 stars)
-
-
-Fish of the Day $8.95
-Delectable slices of fish, pan seared thoroughly in extra virgin olive oil & our garlic tapenade. (Opt. spice 1-5 stars)
-
-
-Tofu Delight $8.50
-Where's the MEAT? Who cares, extra firm organic tofu cut into bite size pieces & sautéed in extra virgin olive oil w/ our garlic tapenade. (Optional spice 1-5 stars)
-
-<p>
-Paseo Press $8.95
-Succulent morsels of roasted pork nestled atop sweet banana peppers, draped with sheer slices of smoked ham, Swiss cheese, and caramelized onions; all melted together between a hot press. (No lettuce or jalapeños)
-</p>
-<p>
-Ham and Cheese $7.50
-Our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered with caramelized onions, & Swiss cheese, melted together on a hot press. (No lettuce or jalapeños)
-Onion Obsession Sandwich $6.00 Caramelized onions sautéed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeño peppers. (Optional spice 1-5 stars)
-</p>
-Havana Seared Scallops $8.95
-Sizable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro. (Optional spice 1-5 stars)
-</p>
