--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -7,24 +7,47 @@
 	</div>		 
 
 	<article>
-		<h4><em>Esquire<em></h4>
-			<p>
-				In 2008 Paseo was credited as one of the best sandwiches in America, find us under the category <strong>Cuban Meat Sandwich</strong>. Link to coverage: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
+		<h4>Esquire</h4>
+			<p class="description">
+				In 2008 Paseo was credited as one of the best sandwiches in America by <cite>Esquire Magazine</cite>, find us under the category <strong><em>Cuban Meat Sandwich</em></strong>. Link to coverage: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
 			</p>	
 	</article>
 	<article>
 		<h4>The Seattle Times</h4>
 			<p class="description">
-				It's comes as no surprise Paseo has been featured in <cite>The Seattle Times</cite> on numerous occasions.  Here are some of our favorite articles over the past years.
+				It's comes as no surprise Paseo has been featured in <cite>The Seattle Times</cite> on numerous occasions.  Here are some of our favorite articles over the past years:
 			</p>	
-			<p>
+			<p class="description">
 				2006: <a href="http://community.seattletimes.nwsource.com/archive/?date=20060901&slug=deal01" target="_blank">A Midnight special hits the spot at lunch</a><br>
 				2008: <a href="http://seattletimes.com/html/pacificnw/2004299471_pacificportrait23.html" target="_blank">Paseo Caribbean | Snares the hungry in its saucy, scentual embrace</a><br>	
 				2011: <a href="http://seattletimes.com/html/restaurants/2015471512_leson01.html" target="_blank">Looking for the best sandwiches in the area? Nancy Leson's readers cast their votes</a>
 			</p>	
 	</article>
 	<article>
-		<h4>Seattle Magazine<h4>
-			<div class="description">
-				Paseo has achieved the 
+		<h4>Seattle Magazine</h4>
+			<p class="description">
+				Paseo has been featured on <cite>Seattle Magazine's</cite> readers' choice list of <strong><em>Best Restaurants</em></strong> for the following years:<strong>
+				<a href="http://www.seattlemag.com/article/best-restaurants-2010-readers-choice-winners-8" target="_blank">2010</a>, 
+				<a href="http://www.seattlemag.com/article/dining/best-seattle-restaurants-2011-directory" target="_blank">2011</a>, 
+				<a href="http://www.seattlemag.com/article/readers-choice-2012-best-restaurants" target="_blank">2012</a>, 
+				<a href="http://www.seattlemag.com/article/readers-choice-2013-best-restaurants-seattle" target="_blank">2013</a>.</strong>
+			</p>
+			<p class="description">
+				Also featured in the 2010 <strong><em>Sandwich Bucket List</em></strong>. Link to coverage: 
+				<a href="http://www.seattlemag.com/article/seattles-48-best-sandwiches-bucket-list" target="_blank">Seattle's 48 Best Sandwiches</a>
+			</p>
+	</article>
+	<article>
+		<h4>Seattle Met</h4>
+		<p class="description">
+			On the <cite>Seattle Met's annual guide to top dining</cite> comes a list of <cite><em>Restaurants that capture the soul of Seattle</em></cite>, we're proud to be one of them. <a href="http://www.seattlemet.com/eat-and-drink/best-restaurants-2012/articles/best-restaurants-2012" target="_blank">Best Restaurants 2012</a>
+		</p>
+		<p class="description">
+			Under the Location <em>Cuba</em>, comes Paseo's Caribbean Roast in the list of Seattle's best restaurants for cheap eats. Link to coverage: <a href="http://www.seattlemet.com/eat-and-drink/cheap-eats-2012/articles/cheap-eats-world-tour-sandwiches-july-2012">Cheap Eats World Tour: Sandwiches</a>
+		</p>		
+	</article>
+	
+
+
+
 
