very fine adjustments on the border, viewing in heroku

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,18 +29,15 @@ body {
   background-color:#ffffff;
   opacity:0.94; 
   padding: 20px;
-  border-top-style: outset;
-  border-bottom-style: outset;
-  border-right-style: outset;
+  border-right-style: inset;
   border-left-style: outset;
-    /*#FBFBFB #0fe9f7 #00F0FFbet*/
   border-color:#D68CA3;
-  border-width: 5px;
-  border-radius: 14px;  
+  border-width: 4px;
+  border-radius: 7px;  
   margin-top:10px;
   /*
   border-style: solid;
-  border-width: 5px;
+  border-width: 4px;
   border-color: #0fe9f7;
   */
 }
