--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,7 +29,7 @@ body {
   background-color:#ffffff;
   opacity:0.94; 
   padding: 20px;
-  border-right-style: inset;
+  border-right-style: outset;
   border-left-style: outset;
   border-color:#D68CA3;
   border-width: 4px;
