--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,11 +29,11 @@ body {
   background-color:#ffffff;
   opacity:0.94; 
   padding: 20px;
-  border-right-style: outset;
-  border-left-style: outset;
+  
+  border-left-style: inset;
   border-color:#D68CA3;
   border-width: 4px;
-  border-radius: 7px;  
+  border-radius: 5px;  
   margin-top:10px;
   /*
   border-style: solid;
