changed bold years in news section

--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -26,11 +26,11 @@
 	<article>
 		<h4>Seattle Magazine</h4>
 			<p class="description">
-				Paseo has been featured on <cite>Seattle Magazine's</cite> readers' choice list of <strong><em>Best Restaurants</em></strong> for the following years:<strong>
+				Paseo has been featured on <cite>Seattle Magazine's</cite> readers' choice list of <strong><em>Best Restaurants</em></strong> for the following years: 
 				<a href="http://www.seattlemag.com/article/best-restaurants-2010-readers-choice-winners-8" target="_blank">2010</a>, 
 				<a href="http://www.seattlemag.com/article/dining/best-seattle-restaurants-2011-directory" target="_blank">2011</a>, 
 				<a href="http://www.seattlemag.com/article/readers-choice-2012-best-restaurants" target="_blank">2012</a>, 
-				<a href="http://www.seattlemag.com/article/readers-choice-2013-best-restaurants-seattle" target="_blank">2013</a>.</strong>
+				<a href="http://www.seattlemag.com/article/readers-choice-2013-best-restaurants-seattle" target="_blank">2013</a>.
 			</p>
 			<p class="description">
 				Also featured in the 2010 <strong><em>Sandwich Bucket List</em></strong>. Link to coverage: 
