--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,8 +29,8 @@ body {
   background-color:#ffffff;
   opacity:0.94; 
   padding: 20px;
-  
   border-left-style: inset;
+  border-bottom-style: outset;
   border-color:#D68CA3;
   border-width: 4px;
   border-radius: 5px;  
