--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer">
     <ul>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><%= link_to "News", news_path  %></li>
+      <li><%= link_to "Home",   root_path %></li>
+      <li><%= link_to "Press", press_path %></li>
+      <li><%= link_to "Contact", contact_path  %></li>
     </ul> 
   </div>
 </footer>
