--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,9 +14,8 @@
       <div class="nav-collapse collapse">
         <ul class = "nav">
           <li><%= link_to "Home", root_path, class:"menu-link"%></li>
-          <li><%= link_to "About", about_path, class:"menu-link" %></li>
           <li><%= link_to "Menu", menu_path, class:"menu-link" %></li>
-          <li><%= link_to "News", news_path, class:"menu-link" %></li>
+          <li><%= link_to "News", press_path, class:"menu-link" %></li>
           <li><%= link_to "Contact", contact_path, class:"menu-link"%></li>
         </ul>	
       </div>
