--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -13,7 +13,7 @@
 		  </div>
 		  <div class="menu-item">
 		  	<span class="num">2.</span><span class="fdname">Caribbean Roast - $8.50</span><br>
-		 		<span class="alt-id"><em>Most Popular - Formerly known as the Midnight Cuban.</em></span><br>
+		 		<span class="alt-id"><em>Most Popular: Formerly known as the Midnight Cuban.</em></span><br>
 		 		Pork shoulder slow-roasted in Paseo Marinade until falling apart.
 			</div>
 			<div class="menu-item">
@@ -129,12 +129,10 @@
 				<span class="num">25.</span><span class="fdname">Tofu Con Gusto - $12.50</span><sup class="gf-vg"> GF / VG</sup><br>
 				Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
 		  </div>
-		  <div class="menu-item">
-		  	<span class="num">26.</span><span class="fdname">Batata Fritas - $10.50</span><br>Hand cut sweet potatos fried in grass-fed beef fat.  Free for BBBC members.
-		  </div>
+
 		</div> 
 	</div><!--end of span12-->	  	
-	<div class="menu-category span12">
+	<div class="menu-category span12 loners-sides">
 		<span class="menu-title">Loners</span>
 		<span class="description"><br><em>All loners are served with a cup of Jasmine rice.</em><span>
 	</div>
@@ -150,7 +148,7 @@
   		<div class="side">Tofu in Red Sauce - $5.75</div>
 		  
 			<div class="menu-category span12">
-			<span class="menu-title">Sides</span>
+			<span class="menu-title loners-sides">Sides</span>
 			</div>
 		  <div class="side">6oz / 12oz black beans - $3.00 / 4.25</div>
 			<div class="side">6oz / 12oz Jasmine rice - $1.50 / 2.50</div>
