--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -68,7 +68,7 @@
 	   </div>
 		  <div class="menu-item">
 		  	<span class="num">13.</span><span class="fdname">Rice Bean Thigh Trio - $8.00</span><br>
-	      Two scoops of jasmine rice, a cup of black beans and a chicken thigh. <br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
+	      Two scoops of Jasmine rice, a cup of black beans and a chicken thigh. <br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
 		  </div>	
 		  <div class="menu-item">
 		  	<span class="num">14.</span><span class="fdname">Paseo Greens - $4.75</span><sup class="gf-vg"> GF / VG</sup><br>
@@ -78,16 +78,16 @@
 		
 		  <div class="menu-item">	
 		  	<span class="num">15.</span><span class="fdname">Black Beans and Rice - $5.50</span><sup class="gf-vg"> GF / VG</sup><br>
-	      A bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans.
+	      A bowl full of fluffy Jasmine rice smothered in our critically acclaimed vegetarian black beans.
 		  </div>  	
 		  <div class="menu-item">
-		  	<span class="num">16.</span><span class="fdname">Rice Beans and Salad - $8.25</span><sup class="gf-vg"> GF / VG</sup><br>
-	      Two scoops of jasmine rice, a cup of black beans and Paseo Greens.
+		  	<span class="num">16.</span><span class="fdname">Rice, Beans and Salad - $8.25</span><sup class="gf-vg"> GF / VG</sup><br>
+	      Two scoops of Jasmine rice, a cup of black beans and Paseo Greens.
 		  </div>
 	</div><!--end of span12 block-->		
 	<div class="menu-category span12">
 		<span class="menu-title">Entr&eacute;es</span>
-		<span class="description"><br><em>All entr&eacute;es are served with jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
+		<span class="description"><br><em>All entr&eacute;es are served with Jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
 	</div>
 	<div class="span12 block">
 		  <div class="menu-item">
@@ -137,16 +137,16 @@
 		  <div class="side">Paseo Pork Loin - $5.75</div>
 			<div class="side">Two Chicken Thighs - $5.25</div>
 			<div class="side">Paseo Half Chicken - $5.75</div>	
-		  <div class="side">Caribbean Roast pork - $5.50</div>
+		  <div class="side">Caribbean Roast Pork - $5.50</div>
 			<div class="side">Prawns in Red Sauce - $6.25</div>
 			<div class="side">Scallops in Red Sauce - $6.25</div>
 			<div class="side">Fish in Red Sauce - $6.25</div>
   		<div class="side">Tofu in Red Sauce - $5.75</div>
 		  
-			<div class="menu-category span12">
-			<span class="menu-title loners-sides">Sides</span>
+			<div class="menu-category span12 loners-sides">
+			<span class="menu-title">Sides</span>
 			</div>
-		  <div class="side">6oz / 12oz black beans - $3.00 / 4.25</div>
+		  	<div class="side">6oz / 12oz black beans - $3.00 / 4.25</div>
 			<div class="side">6oz / 12oz Jasmine rice - $1.50 / 2.50</div>
 			<div class="side">6oz Caramelized Onions - $1.00</div>
 			<div class="side">Corn - $1.00</div>
@@ -163,11 +163,9 @@
 		VG: Vegetarian<br>
 		</span>
 		<span class="alt-id">All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
-	</div>	
+	</div>
 
-
-
-
+		
 </div>
 	
 	
