--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,11 @@
 @import "bootstrap";
 
-
 /* Universal */
 
 body {
-  background-color: #D68CA3;
+  
+/*pinkish #D68CA3*/
+  background-color: #FF7D7D;
   /*padding-top: 40px;*/
   padding-left: 0px !important;
   padding-right: 0px !important;
@@ -27,16 +28,16 @@ body {
   position: static;
   text-align: left;
   background-color:#ffffff;
-  padding: 20px;
+  padding: 20px 20px 10px 20px;
   opacity:0.94; 
-  
   border-left-style: solid;
   border-right-style: solid;
-  border-bottom-style: solid;
-  border-color:#D68CA3;
+  border-color:#FF7D7D;
   border-width: 4px;
- 
-  
+}
+
+.table  {
+  margin-bottom: 20px !important;
 }
 
 #content  {
@@ -52,16 +53,11 @@ body {
     float: left !important; //Allows boxes to stack properly
 }
 
-
-
-
 article{
   margin-top: 25px;
 }
 
 /*Connect Bar*/
-
-
 
 img.icon{
   margin:10px; 
@@ -73,8 +69,8 @@ img.icon{
 /*Footer*/
 
 .footer {
-    background-color: #D68CA3;
-    height: 35px; 
+    background-color: #FF7D7D;
+    height: 100px; 
     width:100%;
     position: relative;    
 }
@@ -85,9 +81,6 @@ footer.footer li{
 
 /* Menu Page */
 
-.list-2s  {
-  margin: 0px auto 0px auto !important;
-}
 
 .menu-category  {
   margin: 7px auto 7px auto !important;
@@ -98,6 +91,7 @@ footer.footer li{
   border-color: #0fe9f7;
   padding-bottom:8px;
   padding-top: 8px;
+  
 }
 
 .menu-title  {
@@ -133,7 +127,6 @@ footer.footer li{
   margin: 15px 0px 15px 0px;
 }
 
-
 .fdname  {
   font-size: 16px;
   margin-left: 7px;
@@ -151,17 +144,10 @@ footer.footer li{
   color: #660000;
 }
 
-
-#fix3-4  {
-  width: 100%
-}
-
 .alt-id  {
   color: #660000;
   font-size: 12px;
 }
-
-
 
 /* Typography */
 h1 {
@@ -178,13 +164,12 @@ h2{
 h3{
   text-size: 1.5em !important; 
 }
-/*#D68CA3*/
+
 .page-title{
   color:#333333;
   text-align: center;
   margin: 0px auto 20px auto;
 }
-
 
 /* Header */
 ul {
@@ -199,8 +184,7 @@ ul {
 
 .menu-link  {
   text-align: center;
-  line-height: 30px;  //size of nav dropdown
-  margin-left: 10px
+  line-height: 25px;  //size of nav dropdown
 }
 
 a.menu-link  {
@@ -226,7 +210,7 @@ a.menu-link  {
   }     
 
 .navbar-inner{
-  background-color: #D68CA3; 
+  background-color: #FF7D7D; 
   background-image: none;
   font-size: 120%;
   border-color: white;
@@ -242,7 +226,6 @@ a.menu-link  {
   margin-left: 0px !important;  //Ensures navbar fits upon resize
   margin-right: 0px !important;
 }
-
 
 @import "bootstrap-responsive";
 
