--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
         <ul class = "nav">
           <li><%= link_to "Home", root_path, class:"menu-link"%></li>
           <li><%= link_to "Menu", menu_path, class:"menu-link" %></li>
-          <li><%= link_to "News", press_path, class:"menu-link" %></li>
+          <li><%= link_to "Press", press_path, class:"menu-link" %></li>
           <li><%= link_to "Contact", contact_path, class:"menu-link"%></li>
         </ul>	
       </div>
