--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,21 +1,22 @@
 <% provide(:title, 'News') %>
-	<h1 class="page-title">Press</h1>
-	<div class="menu-category">
-		<span class="menu-title">
-			Magazines 
-		</span>
-	</div>		 
-
+	<h1 class="page-title">Press</h1> 
 	<article>
 		<h4>Esquire</h4>
 			<p class="description">
-				In 2008 Paseo was credited as one of the best sandwiches in America by <cite>Esquire Magazine</cite>, find us under the category <strong><em>Cuban Meat Sandwich</em></strong>. Link to coverage: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
+				In 2008, Esquire Magazine credited Paseo for having one of the "best sandwiches in America." Find us under the category <em>Cuban Meat Sandwich</em>.<br> Link: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
 			</p>	
+	</article>
+	<article>
+		<h4>TLC</h4>
+			<p class="description">
+				In 2010, Paseo was included in <cite>TLC's TV series: <em>Best Food Ever</em></cite>.  We appeared in Episode 1, <cite>Sensational Sandwiches</cite> ranking 2nd.  Check out this blog post: <a href="http://www.slashfood.com/2010/05/04/tlc-premieres-best-food-ever/" target="_blank">Best Food Ever</a>, or view the episode on Netflix to hear a brief history of our restaurant.<br>
+				Netflix Subscribers: <a href="http://movies.netflix.com/WiMovie/Best_Food_Ever/70222618?locale=en-US" target="_blank">Link to video</a>
+			</p>	 
 	</article>
 	<article>
 		<h4>The Seattle Times</h4>
 			<p class="description">
-				It's comes as no surprise Paseo has been featured in <cite>The Seattle Times</cite> on numerous occasions.  Here are some of our favorite articles over the past years:
+				It's comes as no surprise Paseo has been featured in <cite>The Seattle Times</cite> on numerous occasions, here are some of our favorite articles over the past years.
 			</p>	
 			<p class="description">
 				2006: <a href="http://community.seattletimes.nwsource.com/archive/?date=20060901&slug=deal01" target="_blank">A Midnight special hits the spot at lunch</a><br>
@@ -33,19 +34,32 @@
 				<a href="http://www.seattlemag.com/article/readers-choice-2013-best-restaurants-seattle" target="_blank">2013</a>.
 			</p>
 			<p class="description">
-				Also featured in the 2010 <strong><em>Sandwich Bucket List</em></strong>. Link to coverage: 
+				In 2010 we were also on their <em>Sandwich Bucket List</em>.<br> Link: 
 				<a href="http://www.seattlemag.com/article/seattles-48-best-sandwiches-bucket-list" target="_blank">Seattle's 48 Best Sandwiches</a>
 			</p>
 	</article>
 	<article>
 		<h4>Seattle Met</h4>
 		<p class="description">
-			On the <cite>Seattle Met's annual guide to top dining</cite> comes a list of <cite><em>Restaurants that capture the soul of Seattle</em></cite>, we're proud to be one of them. <a href="http://www.seattlemet.com/eat-and-drink/best-restaurants-2012/articles/best-restaurants-2012" target="_blank">Best Restaurants 2012</a>
+			On the <cite>Seattle Met's annual guide to top dining</cite> comes a list of <cite><em>Restaurants that capture the soul of Seattle</em></cite>, we're proud to be one of them.<br>
+			Link: <a href="http://www.seattlemet.com/eat-and-drink/best-restaurants-2012/articles/best-restaurants-2012" target="_blank">Best Restaurants 2012</a>
 		</p>
 		<p class="description">
-			Under the Location <em>Cuba</em>, comes Paseo's Caribbean Roast in the list of Seattle's best restaurants for cheap eats. Link to coverage: <a href="http://www.seattlemet.com/eat-and-drink/cheap-eats-2012/articles/cheap-eats-world-tour-sandwiches-july-2012">Cheap Eats World Tour: Sandwiches</a>
+			Under the location <em>Cuba</em>, comes Paseo's Caribbean Roast on the list of Seattle's best restaurants for cheap eats.<br>Link: <a href="http://www.seattlemet.com/eat-and-drink/cheap-eats-2012/articles/cheap-eats-world-tour-sandwiches-july-2012">Cheap Eats World Tour: Sandwiches</a>
 		</p>		
 	</article>
+	<article>
+	  <h4>The Stranger</h4>
+	  <p class="description">
+	   <cite>The Stranger</cite> suggests our Caribbean Roast Sandwich, referring to it as a "crackwich" in their <a href="http://www.thestranger.com/suggests/14114561/paseo-caribbean-roast-sandwich" target="_blank"> review</a> of our signature item. 
+	  </p>
+	</article>	
+	<article>
+	  <h4>Seattle P-I</h4>
+	  <p class="description">
+      	Paseo came out on top, receiving the <strong>#1</strong> ranking on <cite>the Seattle P-I's list of their top 20 sandwiches.<br>
+      	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
+	</article>		
 	
 
 
