--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,11 @@
 <footer class="footer">
-    <ul>
+	<div class="container">
+    <ul class="foot-nav">
       <li><%= link_to "Home",   root_path %></li>
+      <li><%= link_to "Menu",  menu_path %></li>
       <li><%= link_to "Press", press_path %></li>
       <li><%= link_to "Contact", contact_path  %></li>
     </ul> 
-  </div>
+ 
 </footer>
 
