--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,25 +9,27 @@
   <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 </head>
 <body>
-  <%= render 'layouts/header' %>
+  
   <div class = "container" id="backdrop">  
     <div class="container main-page">
+      <%= render 'layouts/header' %>
       <div class="row-fluid"> 
-        <div class="span10 text-box" id="content">       
+        <div class="span12 text-box" id="content">       
           <%= yield %>
-        </div>     
-        <div class="aside span2 connect-bar text-box">
+        </div>
+      </div>    
+       <div class="row-fluid">    
+        <div class="aside span12 connect-bar text-box">
           <%= render 'layouts/connect' %>
         </div>
       </div> 
     
 
-
-   </div>
-
-</div>
   <%= render 'layouts/footer' %>
-  </div>     
+   </div>
+    
+</div>
+  
 
 </body>
 </html>
