--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,19 @@
 <footer class="footer">
 	<div class="container">
-    <ul class="foot-nav">
-      <li><%= link_to "Home",   root_path %></li>
-      <li><%= link_to "Menu",  menu_path %></li>
-      <li><%= link_to "Press", press_path %></li>
-      <li><%= link_to "Contact", contact_path  %></li>
-    </ul> 
- 
+	  <div class="row">
+		<div class="bottom-menu">
+    	<ul class="foot-nav">
+      		<li><%= link_to "Home",   root_path %></li>
+      		<li><%= link_to "Menu",  menu_path %></li>
+      		<li><%= link_to "Press", press_path %></li>
+     	    <li><%= link_to "Contact", contact_path  %></li>
+    	</ul>
+    	</div>
+    	<div class="copyright">
+	  		&copy; 2013 Paseo Caribbean<br>
+	  		<a class="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info. designs</a>
+	  	</div>
+      </div>	 
+ 	</div>
 </footer>
 
