--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'News') %>
 	<h1 class="page-title">Press</h1> 
-	<article>
+	<article class="press-top">
 		<h4>Esquire</h4>
 			<p class="description">
 				In 2008, Esquire Magazine credited Paseo for having one of the "best sandwiches in America." Find us under the category <em>Cuban Meat Sandwich</em>.<br> Link: <a href="http://www.esquire.com/features/food-drink/sandwiches"target="_blank">The Best Sandwiches in America</a>
