--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -104,6 +104,7 @@ ul.foot-nav a  {
 
 .copyright  {
   color: #660000;
+  text-align: center;
   margin-left: 10px;
 }
 
@@ -264,7 +265,7 @@ a.menu-link  {
 .navbar-static-top  {
   margin-left: 0px !important;  //Ensures navbar fits upon resize
   margin-right: 0px !important;
-  margin-top: 20px;
+  
 
 }
 
