--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,11 +9,14 @@
      	    <li><%= link_to "Contact", contact_path  %></li>
     	</ul>
     	</div>
+      </div>
+      <div class="row">	
     	<div class="copyright">
 	  		&copy; 2013 Paseo Caribbean<br>
 	  		<a class="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info. designs</a>
 	  	</div>
-      </div>	 
+	  </div>	
+      	 
  	</div>
 </footer>
 
