--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -57,7 +57,7 @@
 	<article>
 	  <h4>Seattle P-I</h4>
 	  <p class="description">
-      	Paseo came out on top, receiving the <strong>#1</strong> ranking on <cite>the Seattle P-I's list of their top 20 sandwiches.<br>
+      	Paseo came out on top, receiving the #1 ranking on <cite>the Seattle P-I's list of their top 20 sandwiches.<br>
       	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
 	</article>		
 	
