--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,7 @@
       <div class="row">	
     	<div class="copyright">
 	  		&copy;2013 Paseo Caribbean<br>
-	  		<a class="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info. designs</a>
+	  		<a class="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a> designs
 	  	</div>
 	  </div>	
       	 
